<!-- 本檔由 scripts/generate-er-diagram.ps1 產生，請勿手動編輯。產生指令：powershell -NoProfile -ExecutionPolicy Bypass -File scripts/generate-er-diagram.ps1 -->
```mermaid
erDiagram
    AUDIT_LOGS {
        number AUDIT_LOG_ID PK
        varchar ENTITY_TYPE
        varchar ENTITY_ID
        varchar ACTION
        varchar ACTOR
        timestamp OCCURRED_AT
        clob OLD_VALUE
        clob NEW_VALUE
    }
    DEPARTMENTS {
        number DEPARTMENT_ID PK
        varchar DEPARTMENT_CODE
        varchar DEPARTMENT_NAME
        number IS_ACTIVE
        number IS_DELETED
        timestamp DELETED_AT
        varchar DELETED_BY
        timestamp CREATED_AT
        varchar CREATED_BY
        timestamp UPDATED_AT
        varchar UPDATED_BY
        varchar NAME_EN
    }
    IDENTITY_ROLES {
        varchar ID PK
        varchar NAME
        varchar NORMALIZED_NAME
        varchar CONCURRENCY_STAMP
    }
    IDENTITY_ROLE_CLAIMS {
        number ID PK
        varchar ROLE_ID FK
        varchar CLAIM_TYPE
        varchar CLAIM_VALUE
    }
    IDENTITY_USERS {
        varchar ID PK
        varchar USER_NAME
        varchar NORMALIZED_USER_NAME
        varchar EMAIL
        varchar NORMALIZED_EMAIL
        number EMAIL_CONFIRMED
        varchar PASSWORD_HASH
        varchar SECURITY_STAMP
        varchar CONCURRENCY_STAMP
        varchar PHONE_NUMBER
        number PHONE_NUMBER_CONFIRMED
        number TWO_FACTOR_ENABLED
        timestamp LOCKOUT_END
        number LOCKOUT_ENABLED
        number ACCESS_FAILED_COUNT
        varchar DISPLAY_NAME
        number DEPARTMENT_ID FK
        varchar EMPLOYEE_NO
        varchar DISPLAY_NAME_EN
    }
    IDENTITY_USER_CLAIMS {
        number ID PK
        varchar USER_ID FK
        varchar CLAIM_TYPE
        varchar CLAIM_VALUE
    }
    IDENTITY_USER_LOGINS {
        varchar LOGIN_PROVIDER PK
        varchar PROVIDER_KEY PK
        varchar PROVIDER_DISPLAY_NAME
        varchar USER_ID FK
    }
    IDENTITY_USER_ROLES {
        varchar USER_ID PK, FK
        varchar ROLE_ID PK, FK
    }
    IDENTITY_USER_TOKENS {
        varchar USER_ID PK, FK
        varchar LOGIN_PROVIDER PK
        varchar NAME PK
        varchar VALUE
    }
    ISSUE_ALLOCATIONS {
        number ISSUE_ALLOCATION_ID PK
        number REQUISITION_LINE_ID FK
        number STOCK_LOT_ID FK
        number QUANTITY
        date EXPIRY_DATE_AT_ISSUE
        timestamp ISSUED_AT
        varchar ISSUED_BY
    }
    ITEMS {
        number ITEM_ID PK
        varchar ITEM_CODE
        varchar ITEM_NAME
        varchar SPECIFICATION
        varchar UNIT_OF_MEASURE
        number TRACKS_LOT
        number TRACKS_EXPIRY
        number SAFETY_STOCK_QTY
        number IS_DELETED
        timestamp DELETED_AT
        varchar DELETED_BY
        timestamp CREATED_AT
        varchar CREATED_BY
        timestamp UPDATED_AT
        varchar UPDATED_BY
        varchar ITEM_NAME_EN
        varchar SPECIFICATION_EN
        varchar UNIT_OF_MEASURE_EN
        varchar BARCODE
    }
    REQUISITIONS {
        number REQUISITION_ID PK
        varchar REQUISITION_NO
        number DEPARTMENT_ID FK
        varchar STATUS
        varchar REJECTION_REASON
        timestamp SUBMITTED_AT
        timestamp APPROVED_AT
        timestamp ISSUED_AT
        timestamp CLOSED_AT
        number ROW_VERSION
        timestamp CREATED_AT
        varchar CREATED_BY
        timestamp UPDATED_AT
        varchar UPDATED_BY
    }
    REQUISITION_LINES {
        number REQUISITION_LINE_ID PK
        number REQUISITION_ID FK
        number LINE_NO
        number ITEM_ID FK
        number QUANTITY
    }
    STOCK_LOTS {
        number STOCK_LOT_ID PK
        number ITEM_ID FK
        varchar LOT_NUMBER
        date EXPIRY_DATE
        number QUANTITY
        varchar STORAGE_LOCATION
        number ROW_VERSION
        timestamp CREATED_AT
        varchar CREATED_BY
        timestamp UPDATED_AT
        varchar UPDATED_BY
    }
    STORAGE_LOCATIONS {
        number LOCATION_ID PK
        varchar LOCATION_CODE
        varchar NAME
        varchar NAME_EN
        number IS_DELETED
        timestamp DELETED_AT
        varchar DELETED_BY
        timestamp CREATED_AT
        varchar CREATED_BY
    }
    IDENTITY_ROLES ||--o{ IDENTITY_ROLE_CLAIMS : "FK_IDENTITY_ROLE_CLAIMS_ROLE"
    DEPARTMENTS o|--o{ IDENTITY_USERS : "FK_IDENTITY_USERS_DEPARTMENT"
    IDENTITY_USERS ||--o{ IDENTITY_USER_CLAIMS : "FK_IDENTITY_USER_CLAIMS_USER"
    IDENTITY_USERS ||--o{ IDENTITY_USER_LOGINS : "FK_IDENTITY_USER_LOGINS_USER"
    IDENTITY_ROLES ||--o{ IDENTITY_USER_ROLES : "FK_IDENTITY_USER_ROLES_ROLE"
    IDENTITY_USERS ||--o{ IDENTITY_USER_ROLES : "FK_IDENTITY_USER_ROLES_USER"
    IDENTITY_USERS ||--o{ IDENTITY_USER_TOKENS : "FK_IDENTITY_USER_TOKENS_USER"
    REQUISITION_LINES ||--o{ ISSUE_ALLOCATIONS : "FK_ISSUE_ALLOC_LINE"
    STOCK_LOTS ||--o{ ISSUE_ALLOCATIONS : "FK_ISSUE_ALLOC_LOT"
    DEPARTMENTS ||--o{ REQUISITIONS : "FK_REQUISITIONS_DEPT"
    ITEMS ||--o{ REQUISITION_LINES : "FK_REQ_LINES_ITEM"
    REQUISITIONS ||--o{ REQUISITION_LINES : "FK_REQ_LINES_REQUISITION"
    ITEMS ||--o{ STOCK_LOTS : "FK_STOCK_LOTS_ITEM"
```
